--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,12 @@
 name: CustomStatsScoreBoard
-author: SBDDeveloper, SmikkelBeertjes
+version: 1.1
+description: A cool scoreboard plugin for you!
+author: SmikkelBeertjes
+authors: [SBDeveloper]
+
 main: me.scoreboard.Main
-version: 1.0
 depend: [Vault]
+
 commands:
    reloadscoreboard:
       description: Reload all the config files
